# jsql

./: .gitignore  Cargo.toml
docs/: mkdocs.yml  pyproject.toml
docs/docs/: implementations.md  index.md
src/: main.rs  tokenizer.rs
src/commands/: create_table.rs
src/structs/: column.rs  mod.rs  table_definition.rs
